@@ -1,24 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST redis-py-2.10.1.tar.gz 84143 SHA256 644aaf429e666d2254143a6a02f3b1cca2806d0cd52bb130c8f879d3c8259d62 SHA512 694a687e22654631fcf7b0b5884c2f3b3f804befe8080a1a27f08e212afe2f64c36921e025801d67bac1786b105f23565f52768f5b62ed1d18038be8dba9542c WHIRLPOOL e1b76cf47043d3d5317fc4352c9b52598af119a1501e4d6af1615181006afa658417002fdd8e206e6d5d5556df6dcbdd34a74b89918c513802793bd6ced4cccd
 DIST redis-py-2.7.1.tar.gz 50723 SHA256 e59c0258d3a831299915ba47640f388107943f3e510a0e89d5ca51e56d2d0474 SHA512 98b22d8870f968535b66475234dcaf2d2eb2b90ba1ae10ba2d25c55c0059bcc34dd4c4494be6fc9b3e59a75e62ef9d4cf66ad6baf5945d68cbed19554d3609ef WHIRLPOOL a1857366f2204201b0e249d9f413a66fd02ac9cc0c9dd23ea36005e5ece6348c325b84d0c2d7f101439c17872302d2bbc9a1b1c444ee8b73547074188cd5b0e3
 DIST redis-py-2.7.2.tar.gz 50888 SHA256 c22e7129f21b8bd1690c2cefc07b2caf1088c66a9dd159aed0621dcbaf2dfb09 SHA512 d29fc1a3b0f2dedc2148f8aee4b34d07d6735a26db3a894c2f2960edd5db31f2b9d2bef1cd314a6c0ecf6ab7fa2c224615227bb30aeeec9ec5dffeff9a92f797 WHIRLPOOL a681f79570eb5bd8a168671304a1495d24286007dbbda371fc019ef87275de07345e9601d24f3bc0ce092f5bb46e783e90990871d1b448e63818faf0a47d1a56
 DIST redis-py-2.7.4.tar.gz 79715 SHA256 623c8d437401314f8ec92f03848638c79c757098b316f0ed40ec2deaad57e082 SHA512 9b8db28c77e9df7a243e510a4f66a021179ab8ff52cfed2cc1b18b20f167eeee138d59a868fc105a32993681551c53e98d45680c16313680e8b4f36b6defa3b9 WHIRLPOOL fa5c754dc83f7d8baea68e21e283435994380e3e7243fa9bdb74ce934f7adacc75a11c6312d4b642606aa817010abc23f8f2a7b9eac1e2c73e50e897085124ad
 DIST redis-py-2.7.5.tar.gz 79973 SHA256 6c25b05411014ad11feb4869a8c5e5facc900640c597a288bcd3de6a2ab8948a SHA512 63d8aa506f8b350dd1691efe179371bad093025289f83df5d55ad0a13671153b91858f05b74ff74346da02512333f1da9728a25841a4f2befa5a541054c77eb1 WHIRLPOOL 232b49e91a68a0bcb3c555c8479f6e0104e234f57d54d1fbf716a28dc05de1a0f5b0ccbac2f9e279c9c62380008ad5ec1b2b7acec894ec4f9ec488b8ed92355a
 DIST redis-py-2.7.6.tar.gz 76041 SHA256 7e8645a5e1a5e36fb6f93d3113eb078e2763db15aafa3dfa5ba2ceace26a01c4 SHA512 60ec991b35fbfdb9db4bdfc0974f353a2e64d95d758bef81308585c262382bf8080a7d2b7a31211a6b23c9f6fc782b7b62c1909d455d6da87a0efcaa8322e2ed WHIRLPOOL c17f9af68a41332e12d16479ab237a24d43eca4d99919a7cdf760d2e0d6fef92c83a1e45fbaf3029353ee0ac2639edc45dc96088ed3e71fb9bdc02f3ff3c4b09
 DIST redis-py-2.9.1.tar.gz 62204 SHA256 af9747ec2727425b1b09252975e21502ee5a3d8d235c7f49869eb13e09ccf4e4 SHA512 6b4912acafb31c87a5bc47b0420834aa9d1eba57feb0bbacdea943b746fe2f24aee4c9f13e7b03ae4edc562043b22c370cc7f53e45be07c5408cfa9852f8ea38 WHIRLPOOL ae38ea63d605f8dd667d9fc548de972bf38d661ae6ef357070ebe7cba3b484febc45d6b7611916d8a1e262e6bbf4754257e727f41af8caa30597954a1fc20cf5
+EBUILD redis-py-2.10.1.ebuild 1988 SHA256 80373ed5c90cec2683a588b484320eb243fe039f418627261cba0b1e7f288222 SHA512 7d4e704eff6f0cd94494baeff714dc7c2807b3e5ca95f979aaa113ad0ae5b77357b068aa7ff6368fd9359c17865de84c8b85a61d07a4edf0abbbe35596f23f3f WHIRLPOOL ea7ce93e9ec0d8451e5d5062e3b39d9083291c6011503511044ab87e2e9bd2486ac9038dc9861ff1f53c69b5f17346b3dca99614cf88cae99d5af77e631b9e28
 EBUILD redis-py-2.7.1.ebuild 1073 SHA256 992e99673f8b98e08285828d5b88c08c8cd930c3c3d1d72dacc02eefff81373d SHA512 60fd0c436de38854e51514b9e895f7373ce904cdfb095664420e1f0c446d41ef181c5bd5cae9861c63addef950db9e17e3e4b4445b1327a6cd70833f164e27fc WHIRLPOOL eec33f5e78d14c1a15fc95b147bf8dbf0fb644bc8f521d3b892af7ecab3523c4d7010fb9ff65406f21f1e55284a08257bb9ed2db9d062140cf179f9646861e23
 EBUILD redis-py-2.7.2-r1.ebuild 1730 SHA256 14f651a2e28b6f0d3ed0e40c9160c695b553bbdf1c2c7c4c86a60e94f6a9a222 SHA512 fd3b19cc52cd956a0fa3baa9c84fa427fff64a3e0af244c1ce083e66c456735b1e489e38f1ae2136e8093e1a2b1b84f9a7917238b221b88a00301a76d29c1415 WHIRLPOOL 9fdf46321342a1661ea25144706653e8a3c335543398e6ded2355b1aecbc7f342d2ab59f10e23843c48f100bd9b46d6cfd4dda5acf4e0a5732f9e43da8bf4ca0
 EBUILD redis-py-2.7.4.ebuild 1727 SHA256 6bdd23a2d0fbe9523e426e126c32b80149b104f5b88fb02eb9560384d25448ed SHA512 6ee8391e276a75fb4837dcf8381861021bda0dde1d2ff4e7cb9c77aa28896f2dd97b8f051c5781cf568fc8ed54c6b45a38e88b9e02b67d8ebd1cc24c3b306926 WHIRLPOOL 6a2fb20d65ac84fb7cf9b8ec5c41ea601132b898fc3571af22b91ee53dda40ede1f570bf11f644502e164c29687279fb1baeae0b53aa17c28c42709e00cdaacc
 EBUILD redis-py-2.7.5.ebuild 1729 SHA256 9abddd47f5dc5e88c79ca0619b87ba612c528b9a4002d45c6e7f204cdd7c74a7 SHA512 81c14b4ae4cf3382c67bac196f5444d4dd0014fd532b7e52ebc9b89cfb216ba24afd667a798af5ccdd0872227fff1a893b336ed5f2092b6d4f66fe1faf053d4e WHIRLPOOL 311c41699ea12bf1b244879731f8cb4c7a08fedb31f9714be5a3a201b392e00a2f17e4011c226471b3e86c220625a3130f24688d06cf5f7e7c82a9b689209166
 EBUILD redis-py-2.7.6.ebuild 1729 SHA256 2dfe42c95e8bfb4da7b6967ee70dd15cfee3c51737c33f5d6c3363a0c11763b3 SHA512 1fc9d84a4d452717be41ebd6d0eda016d863b99f1d313a26859158fbb59bcc398770ebc09fee51c00ed263aa7fac37bcdade42b39983c28271e26141f2657cff WHIRLPOOL 83c53a84902af508de47b5e92d99655149b2045c56d77fe32f20f1c48b14b9e2416f6b82567b91b14b26cff86e9531699e9c6a173a0e8adeeb4c78637a865476
 EBUILD redis-py-2.9.1.ebuild 1714 SHA256 576482b754ed421bf8114c6c130ffe355e9ebadf2435fcf854e83fa656242b7c SHA512 c6962527d265ba233e014ae87e0d474fbad947e6468dd9a088e5e3f8ff6b7593e2718c3a462a65b400cd7445b4e987bda36370fd3e2f5f8e8da959547d2994dd WHIRLPOOL d7fef43a3585c55fff3026c98009e94398043e70efa3233c1f93105e0731f501ca8632afb2849432ce81980756ce376f77fa79691c39270d972aa94cadf9866e
-MISC ChangeLog 6199 SHA256 fe6b1965441186037467d019996b4e0d90dc265a7d898643100f74d45d540b77 SHA512 c9c0bbe8cac4327ceefdf2b809634ea12e1d610d5c53e773db79b3f20a4e7f56ef967ad507e09da68f3cc542d0885e49c19dc7aec82eb2c2e7b3321f7da898b6 WHIRLPOOL e0130eed6c4dfe014c0e01fa453ee5b0bc2767cfc249271feab541432e7bafbbd572c13316dbc843c2bf6c5f58288cf3331b31a38495562fc7b31105eea1f084
+MISC ChangeLog 6335 SHA256 28a43bd2c5c3135e65a882c7fd5b371e163f9786341e633866c38151bfa342f2 SHA512 ec9f1c5684aa4d0fa626bfb26ca2b9e456cc21230a482125aca73dba9e1d0d9c0d5bd9cb692541f8227a5daeddeacd032df1146a6c19d0491ff83e728b5188da WHIRLPOOL d382da60b3e55c043b98bc003e90f5b19a8b0d8c36152772f54ec497d62c705a9fa66c22779302b79cee14830c23597cda4b407cb147872cf45c9f2e63a03d15
 MISC metadata.xml 233 SHA256 4bd1b6f493a0e22eed218abfb9305447fb0b91b68b97177e494587202690d474 SHA512 3667747aa121e58c82f1c6e1f617425c105a23b0c448aafff82cea74074cb6d309502c4cc5892c3daa6925e2c364a88d1f0a027333bbbaf9b35a764de17e9840 WHIRLPOOL 7faf147b4036cb7af89348d628cf7a4ed6e2cd2757868c53438af98c3a967505776c9fd4ef5372cd48b40fcc68cc33bc18e3001f0413cfe58ee9524fe56eb9aa
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlN7PCEACgkQVWmRsqeSphNj+wCcCHuiWjfoFZtXNflS5sCAAUz3
-NWAAn1oXKi21QymOob8/KpyDjnSgpIuY
-=J5zV
+iEYEAREIAAYFAlOqNUMACgkQso7CE7gHKw21EQCeIB+BcOQ8p1meZdKiWVwJMTq3
+RmsAn2s0ExWzYXifWuJrs4/svTKEKpsC
+=UJA6
 -----END PGP SIGNATURE-----
