@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/redis-py
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/redis-py/ChangeLog,v 1.46 2014/05/20 11:27:28 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/redis-py/ChangeLog,v 1.47 2014/06/25 02:42:52 idella4 Exp $
+
+*redis-py-2.10.1 (25 Jun 2014)
+
+  25 Jun 2014; Ian Delaney <idella4@gentoo.org> +redis-py-2.10.1.ebuild:
+  bump; add py3.4 support
 
   20 May 2014; Jeroen Roovers <jer@gentoo.org> redis-py-2.9.1.ebuild:
   Marked ~hppa (bug #510626).
